<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estadio2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:fontFamily=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pagos"
        android:textColor="#F7F4ED"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/ciudad"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints="1"
        android:background="#37D6DAD2"
        android:ems="10"
        android:hint="@string/_0000"
        android:textAlignment="center"
        android:inputType="text"
        android:text=""
        android:textColor="#d1d1d2"
        android:textColorHint="#f6f6f6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/cantidad"
        app:layout_constraintTop_toBottomOf="@+id/lblCiudad"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/lblCiudad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/c_digo"
        android:textColor="#F7F4ED"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblCantidad"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/cantidad"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="#37D6DAD2"
        android:ems="10"
        android:hint="@string/xxx_xxx_xxxx"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#d1d1d2"
        android:textColorHint="#f6f6f6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCantidad"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/precio_final_30"
        android:textColor="#F7F4ED"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/lblCantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/n_tarjeta"
        android:textColor="#F7F4ED"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="200sp"
        android:layout_height="60dp"
        android:backgroundTint="#49678d"
        android:text="@string/pay"
        android:textSize="20sp"
        android:textColor="#F7F4ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ciudad"
        app:layout_constraintVertical_bias="0.256" />

    <Button
        android:id="@+id/button2"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:backgroundTint="#CB3234"
        android:text="@string/back"
        android:textColor="#F7F4ED"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.359" />


</androidx.constraintlayout.widget.ConstraintLayout>