<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estadio2"
    tools:context=".PantallaPrincipal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="28dp"
        android:text="Inicio"
        android:textColor="@color/white"
        android:textSize="60px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/button"
        android:layout_width="175dp"
        android:layout_height="52dp"
        android:background=""
        android:text="@string/BotonCampeonato"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="62px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <Button
        android:id="@+id/button2"
        android:layout_width="223dp"
        android:layout_height="50dp"
        android:background=""
        android:text="@string/BotonPartido"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="62px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733" />

    <Button
        android:id="@+id/button3"
        android:layout_width="189dp"
        android:layout_height="50dp"
        android:background=""
        android:text="@string/BotonVerActividad"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="62px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="140dp"
        android:layout_height="175dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"
        app:srcCompat="@drawable/LogoBlanco" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="87dp"
        android:layout_height="83dp"
        android:contentDescription="@string/BotonHome"
        android:onClick="Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/casa" />
</androidx.constraintlayout.widget.ConstraintLayout>